--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/acolima/MyWallet_Back#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "joi": "^17.6.0",
+    "mongodb": "^4.3.1",
     "nodemon": "^2.0.15"
   }
 }
