--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.2",
     "joi": "^17.6.0",
     "mongodb": "^4.3.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
