--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "mongodb": "^4.3.1",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "dayjs": "^1.10.7",
+    "string-strip-html": "^9.1.6"
   }
 }
