--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon src/app.js"
+    "start": "node ./src/app.js",
+		"dev": "npx nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
