undo the cors config

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon ./src/app.js",
+    "start": "node ./src/app.js",
 		"dev": "npx nodemon ./src/app.js"
   },
   "repository": {
