--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/app.js", 
-    "dev": "npm nodemon ./src/app.js"
+    "dev": "npx nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
